# airopa-automation

./: .dockerignore  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTIC_UPGRADE_PHASE1_PLAN.md  AGENTIC_UPGRADE_PLAN.md  CI_CD_FIXES.md  CI_TEST.md  DATABASE_INTEGRATION_COMPLETE.md  Dockerfile  FINAL_FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  RSSFEED_TESTING.md  docker-compose.yml  evals-claude-kilo.md  evals-claude.md  evals-codex-kilo.md  evals-codex.md  evals-mistral.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.docker.txt  requirements.txt  run_tests.py  start.sh  test_pipeline.py
.github/workflows/: ci_cd.yml  scheduled-scrape.yml
airopa_automation/: __init__.py  agents.py  budget.py  config.py  database.py  llm.py  llm_schemas.py
airopa_automation/agents/: __init__.py  classifier.py  content.py  models.py  quality.py  scraper.py  summarizer.py
airopa_automation/api/: auth.py  init_db.py  main.py  rate_limit.py
airopa_automation/api/models/: __init__.py  database.py  schemas.py
airopa_automation/api/routes/: articles.py  health.py  jobs.py
airopa_automation/api/services/: __init__.py  pipeline.py
database/: schema.sql
scripts/: add_confidence_column.py  add_eu_relevance.py  add_image_url.py  add_llm_telemetry.py  add_source_metrics.py  create_eval_set.py  cron_scrape.py  enhance_source_metrics.py  fix_country_categories.py  fix_stuck_jobs.py  normalize_sources.py  reclassify_articles.py  run_eval.py  test_llm_dryrun.py  test_prompts_v2.py
tests/: test_agents.py  test_articles_route.py  test_budget.py  test_config.py  test_llm.py  test_llm_schemas.py
