[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airopa-automation"
version = "0.1.0"
description = "AI-powered automation workflows"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["airopa_automation*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = true
warn_unreachable = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# SQLAlchemy models - disable strict checking
[[tool.mypy.overrides]]
module = "airopa_automation.api.models.database"
disable_error_code = ["valid-type", "misc"]

# Routes accessing SQLAlchemy models
[[tool.mypy.overrides]]
module = "airopa_automation.api.routes.*"
disable_error_code = ["arg-type"]

# Services accessing SQLAlchemy models
[[tool.mypy.overrides]]
module = "airopa_automation.api.services.*"
disable_error_code = ["assignment", "arg-type"]

# FastAPI/Starlette middleware typing
[[tool.mypy.overrides]]
module = "airopa_automation.api.main"
disable_error_code = ["arg-type", "call-arg"]
